--- a/lesson03/5.提交表单.html
+++ b/lesson03/5.提交表单.html
@@ -8,27 +8,33 @@
 </head>
 <body>
 
-<form action="#" method="post">
+<!--表单绑定提交事件
+onsubmit= 绑定一个提交检测的函数， true，false
+讲这个结果返回给表单，使用onsubmit接收！
+onsubmit="return aaa()"
+-->
+<form action="https://www.baidu.com/" method="post" onsubmit="return aaa()">
     <p>
         <span>用户名：</span><input type="text" id="username" name="username">
     </p>
     <p>
-        <span>密码：</span><input type="password" id="password" name="password">
+        <span>密码：</span><input type="password" id="input-password">
     </p>
 
+    <input type="hidden" id="md5-password" name="password">
+
     <!--  绑定事件 onclick 被点击  -->
-    <button type="submit" onclick="aaa()">提交</button>
+    <button type="submit">提交</button>
 </form>
 
 <script>
     function aaa() {
         var username = document.getElementById('username');
-        var password = document.getElementById('password');
-        console.log(username.value);
-        console.log(password.value)
-        //MD5加密
-        password.value = md5(password.value);
-        console.log(password.value);
+        var password = document.getElementById('input-password');
+        var md5Password = document.getElementById('md5-password');
+        md5Password.value = md5(password.value);
+        //可以校验判断表单内容，true就是通过提交，false，阻止提交
+        return true;
     }
 </script>
 
